--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
   </head>
   <body>
     <div class="container py-4">
-      <h1 class="fw-bold mb-2">ตัวคิดเวลา OT (ประเทศไทย)</h1>
+      <h1 class="fw-bold mb-2">ตัวคิดเวลา OT</h1>
 
       <div
         class="alert alert-info"
