--- a/index.html
+++ b/index.html
@@ -370,8 +370,9 @@
           langEnglish: "ภาษาอังกฤษ",
           syncBtn: "ซิงก์ Git",
           syncingTitle: "กำลังซิงก์...",
-          syncingMessage: "กำลังอัปเดต data.json ไปยัง Git",
+          syncingMessage: "กำลังซิงค์และดึงข้อมูล data.json กับ Git",
           syncSuccess: "ซิงก์ Git สำเร็จแล้ว",
+          syncPulled: "ดึงข้อมูลล่าสุดจาก Git แล้ว",
           syncNoChanges: "ไม่มีการเปลี่ยนแปลงใหม่ใน data.json",
           syncError: "ซิงก์ Git ล้มเหลว",
           okBtn: "ตกลง",
@@ -424,8 +425,9 @@
           langEnglish: "English",
           syncBtn: "Sync Git",
           syncingTitle: "Syncing...",
-          syncingMessage: "Pushing data.json to Git",
+          syncingMessage: "Syncing data.json with Git (pull/push)",
           syncSuccess: "Git sync completed",
+          syncPulled: "Pulled latest data from Git",
           syncNoChanges: "No new changes to push",
           syncError: "Git sync failed",
           okBtn: "OK",
@@ -718,7 +720,24 @@
           if (!response.ok || data.error) {
             throw new Error(data.details || data.error || "sync_failed");
           }
-          if (data.message === "no_changes") {
+          if (data && data.syncedData) {
+            const syncedRecords = Array.isArray(data.syncedData.records)
+              ? data.syncedData.records
+              : [];
+            const syncedLastUpdate =
+              typeof data.syncedData.lastUpdate === "string"
+                ? data.syncedData.lastUpdate
+                : "";
+            localStorage.setItem(
+              "otRecords",
+              JSON.stringify(syncedRecords)
+            );
+            localStorage.setItem("otLastUpdate", syncedLastUpdate);
+            renderSummary(true);
+          }
+          if (data.message === "pulled") {
+            await showSuccess(t("syncPulled"));
+          } else if (data.message === "no_changes") {
             await showInfo(t("syncNoChanges"));
           } else {
             await showSuccess(t("syncSuccess"));
